--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
-<html>
-  <body>
-      Hello DBC!
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>MJ Schindler's Dev Bootcamp Project Website</title>
+<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
+<!--[if IE]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!--[if lte IE 7]>
+  <script src="js/IE8.js" type="text/javascript"></script><![endif]-->
+<!--[if lt IE 7]>
+  <link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
+</head>
+
+<body>
+  <header>
+  <h1>MJ Schindler's Dev Bootcamp Project Website</h1>
+  <nav><ul>
+    <li><a href="#">home</a></li>
+    <li><a href="#">about</a></li>
+    <li><a href="#">portfolio</a></li>
+    <li><a href="#">blog</a></li>
+    <li><a href="#">contact</a></li>
+  </ul></nav>
+</header>
+<article>
+<h2>What Happens Inside Dev Bootcamp?</h2>
+<h4>Explore One Woman's Journey from Digital Marketer to Web Developer</h4>
+</article>
+</body>
 </html>
