--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>MJ Schindler's Dev Bootcamp Project Website</title>
-<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 <!--[if IE]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if lte IE 7]>
@@ -13,19 +13,19 @@
 </head>
 
 <body>
-  <header>
-  <h1>MJ Schindler's Dev Bootcamp Project Website</h1>
-  <nav><ul>
-    <li><a href="#">home</a></li>
-    <li><a href="#">about</a></li>
-    <li><a href="#">portfolio</a></li>
+  <header id="title">
+  <h5><a href="#">MJ Schindler's Dev Bootcamp Project Website</a></h5>
+  <nav>
+  <ul>
     <li><a href="#">blog</a></li>
+    <li><a href="#">portfolio</a></li>
     <li><a href="#">contact</a></li>
+    <li><a href="#">about</a></li>
   </ul></nav>
 </header>
-<article>
-<h2>What Happens Inside Dev Bootcamp?</h2>
-<h4>Explore One Woman's Journey from Digital Marketer to Web Developer</h4>
+<article class="callToAction transparent">
+    <h1>What Happens Inside Dev Bootcamp?</h1>
+    <h4>My Journey From Digital Marketer to Web Developer</h4>
 </article>
 </body>
 </html>
