Add footer and blog posts

--- a/blog-index.html
+++ b/blog-index.html
@@ -24,8 +24,8 @@
   </ul></nav>
 </header>
 <article class="callToAction transparent">
-    <h1>What Happens Inside Dev Bootcamp?</h1>
-    <h4>My Journey From Digital Marketer to Web Developer</h4>
+  <h2><a href="#">My First Dev Bootcamp Blog Post</a></h2> February 7, 2015
+  <h2><a href="#">My Take on Dev Bootcamp...And Shereef's Fireside Chat</a></h2> February 7, 2015
 </article>
 </body>
 </html>
