--- a/blog-index.html
+++ b/blog-index.html
@@ -17,15 +17,15 @@
   <h5><a href="#">MJ Schindler's Dev Bootcamp Project Website</a></h5>
   <nav>
   <ul>
-    <li><a href="#">blog</a></li>
+    <li><a href="http://mjschindler.github.io/blog-index.html">blog</a></li>
     <li><a href="#">portfolio</a></li>
     <li><a href="#">contact</a></li>
     <li><a href="#">about</a></li>
   </ul></nav>
 </header>
 <article class="callToAction transparent">
-  <h2><a href="#">My First Dev Bootcamp Blog Post</a></h2> February 7, 2015
-  <h2><a href="#">My Take on Dev Bootcamp...And Shereef's Fireside Chat</a></h2> February 7, 2015
+  <h2><a href="http://mjschindler.github.io/blog/t1-git-blog.html">My First Dev Bootcamp Blog Post</a></h2> February 7, 2015
+  <h2><a href="http://mjschindler.github.io/blog/c1-chefs-kitchen.html">My Take on Dev Bootcamp...And Shereef's Fireside Chat</a></h2> February 7, 2015
 </article>
 </body>
 </html>
