Update blog index with 3rd blog

--- a/blog-index.html
+++ b/blog-index.html
@@ -18,8 +18,9 @@
   </ul></nav>
 </header>
 <article class="callToAction transparent">
-  <h2><a href="http://mjschindler.github.io/blog/t1-git-blog.html">My First Dev Bootcamp Blog Post</a></h2> February 7, 2015
+  <h2><a href="http://mjschindler.github.io/blog/t2-css-design.html">Absolute, Relative, or Fixed Positioning: What's the difference?</a></h2> February 15, 2015
   <h2><a href="http://mjschindler.github.io/blog/c1-chefs-kitchen.html">My Take on Dev Bootcamp...And Shereef's Fireside Chat</a></h2> February 7, 2015
+  <h2><a href="http://mjschindler.github.io/blog/t1-git-blog.html">My First Dev Bootcamp Blog Post</a></h2> February 7, 2015
 </article>
 </body>
 </html>
