--- a/blog-index.html
+++ b/blog-index.html
@@ -18,13 +18,20 @@
   </ul></nav>
 </header>
 <article class="callToAction transparent">
-  <h2><a href="http://mjschindler.github.io/blog/t3-arrays-hashes.html">Array vs. Hash: Introducing Ordered and Indexed collections of Objects in Ruby</a></h2> February 22, 2015
+  <h2><a href="http://mjschindler.github.io/blog/c3-thinking-style.html">Abstract Random Thinking: What It Means for Dev Bootcamp</a></h2>
+  February 22, 2015
   <br>
-  <h2><a href="http://mjschindler.github.io/blog/t2-css-design.html">Absolute, Relative, or Fixed Positioning: What's the Difference?</a></h2> February 15, 2015
+  <h2><a href="http://mjschindler.github.io/blog/t3-arrays-hashes.html">Array vs. Hash: Introducing Ordered and Indexed collections of Objects in Ruby</a></h2>
+  February 22, 2015
   <br>
-  <h2><a href="http://mjschindler.github.io/blog/c1-chefs-kitchen.html">My Take on Dev Bootcamp...And Shereef's Fireside Chat</a></h2> February 7, 2015
+  <h2><a href="http://mjschindler.github.io/blog/t2-css-design.html">Absolute, Relative, or Fixed Positioning: What's the Difference?</a></h2>
+  February 15, 2015
   <br>
-  <h2><a href="http://mjschindler.github.io/blog/t1-git-blog.html">My First Dev Bootcamp Blog Post</a></h2> February 7, 2015
+  <h2><a href="http://mjschindler.github.io/blog/c1-chefs-kitchen.html">My Take on Dev Bootcamp...And Shereef's Fireside Chat</a></h2>
+  February 7, 2015
+  <br>
+  <h2><a href="http://mjschindler.github.io/blog/t1-git-blog.html">My First Dev Bootcamp Blog Post</a></h2>
+  February 7, 2015
 </article>
 </body>
 </html>
