--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8" />
 <title>MJ Schindler's Dev Bootcamp Project Website</title>
 <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-
 </head>
 
 <body>
@@ -12,6 +11,7 @@
   <h5><a href="http://mjschindler.github.io/index.html">MJ Schindler's Dev Bootcamp Project Website</a></h5>
   <nav>
   <ul>
+    <li><a href="http://mjschindler.github.io/blog-index.html">pair programming</a></li>
     <li><a href="http://mjschindler.github.io/blog-index.html">blog</a></li>
     <li><a href="#">portfolio</a></li>
     <li><a href="#">contact</a></li>
@@ -23,6 +23,7 @@
     <h4>My Journey From Digital Marketer to Web Developer</h4>
 </article>
 </body>
+
 </html>
 <footer>
   <ul>
