--- a/blog-index.html
+++ b/blog-index.html
@@ -19,6 +19,8 @@
   </ul></nav>
 </header>
 <article class="callToAction transparent">
+  <a href="http://mjschindler.github.io/blog/c4-tech-issues.html">Startups and Cybersecurity: Why You Should Build for Privacy and Security First</a> | March 1st, 2015
+  <hr>
   <a href="http://mjschindler.github.io/blog/c3_thinking-style.html">Abstract Random Thinking: What It Means for Dev Bootcamp</a> | February 22, 2015
   <hr>
   <a href="http://mjschindler.github.io/blog/t3-arrays-hashes.html">Array vs. Hash: Introducing Ordered and Indexed collections of Objects in Ruby</a> | February 22, 2015
@@ -40,4 +42,3 @@
     <li><a href="http://www.mjschindler.com/">mjschindler.com</a></li>
   </ul>
 </footer>
-</header>
