Add t4 post and image

--- a/blog-index.html
+++ b/blog-index.html
@@ -19,6 +19,7 @@
   </ul></nav>
 </header>
 <article class="callToAction transparent">
+  <a href="http://mjschindler.github.io/blog/t4-enumerable-methods.html">Don't Cycle to Infiniti: A Brief Introduction to Ruby Enumerable#Cycle</a> | February 1, 2015
   <a href="http://mjschindler.github.io/blog/c4-tech-issues.html">Startups and Cybersecurity: Why You Should Build for Privacy and Security First</a> | March 1st, 2015
   <hr>
   <a href="http://mjschindler.github.io/blog/c3_thinking-style.html">Abstract Random Thinking: What It Means for Dev Bootcamp</a> | February 22, 2015
