update blog index background

--- a/blog-index.html
+++ b/blog-index.html
@@ -18,7 +18,7 @@
     <li><a href="#">about</a></li>
   </ul></nav>
 </header>
-<article class="callToAction transparent">
+<article class="callToAction transparentLight">
   <a href="http://mjschindler.github.io/blog/t5-ruby-classes.html">An Introduction to Classes: Let's Make a Kitty Cat</a> | March 9, 2015
   <hr>
   <a href="http://mjschindler.github.io/blog/t4-enumerable-methods.html">Don't Cycle to Infiniti: A Brief Introduction to Ruby Enumerable#Cycle</a> | February 1, 2015
