Fix some style issues

--- a/blog-index.html
+++ b/blog-index.html
@@ -5,8 +5,6 @@
 <title>MJ Schindler's Dev Bootcamp Project Website</title>
 <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
-
-<body>
   <header id="title">
   <h1><a href="http://mjschindler.github.io/index.html">MJ @ DBC</a></h1>
   <nav>
@@ -18,7 +16,8 @@
     <li><a href="#">about</a></li>
   </ul></nav>
 </header>
-<article class="callToAction transparentLight">
+<body>
+<article class="transparentLight margins">
   <a href="http://mjschindler.github.io/blog/c5-feedback.html">Pairing is Caring: Pair Programming and Peer Feedback at Dev Bootcamp</a> | March 9, 2015
   <hr>
   <a href="http://mjschindler.github.io/blog/t5-ruby-classes.html">An Introduction to Classes: Let's Make a Kitty Cat</a> | March 9, 2015
