--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <title>MJ Schindler's Dev Bootcamp Project Website</title>
 <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
-
-<body>
-  <header id="title">
+<header id="title">
   <h1><a href="http://mjschindler.github.io/index.html">MJ @ DBC</a></h1>
   <nav>
   <ul>
@@ -18,13 +16,13 @@
     <li><a href="#">about</a></li>
   </ul></nav>
 </header>
+<body>
+  <h1> hello!!!</h1>
 <article class="callToAction transparent">
     <h1>What Happens Inside Dev Bootcamp?</h1>
     <h4>My Journey From Digital Marketer to Web Developer</h4>
 </article>
 </body>
-
-</html>
 <footer>
   <ul>
     <li><a href="https://twitter.com/mjschindler">twitter</a></li>
@@ -33,3 +31,4 @@
     <li><a href="http://www.mjschindler.com/">mjschindler.com</a></li>
   </ul>
 </footer>
+</html>
