--- a/blog-index.html
+++ b/blog-index.html
@@ -18,6 +18,10 @@
 </header>
 <body>
 <article class="transparentLight margins">
+  <a href="http://mjschindler.github.io/blog/t6-oop-concepts.html">Class Variables and Instance Variables</a> | April 5, 2015
+  <hr>
+  <a href="http://mjschindler.github.io/blog/c6-stereotype-threat.html">Can't Let the Other Girls Down: My Experience with Stereotype Threat</a> | April 5, 2015
+  <hr>
   <a href="http://mjschindler.github.io/blog/c5-feedback.html">Pairing is Caring: Pair Programming and Peer Feedback at Dev Bootcamp</a> | March 9, 2015
   <hr>
   <a href="http://mjschindler.github.io/blog/t5-ruby-classes.html">An Introduction to Classes: Let's Make a Kitty Cat</a> | March 9, 2015
